--- a/.Hrc
+++ b/.Hrc
@@ -85,10 +85,10 @@ T:89        =>   Ac       => f:fd      ; # proly will kEp tty loop just 0..7 as 
 A           =>   Y        =>  Trp:Als => Alias; # wh8 aliasez as of F3BMLn6r wi just Ovr half of b64 mapd sOfR;  need2add Xtra map for ~/bin XeQtz4up2autOrun
 A:8ABCDEFG  =>   VABWD5FG =>       viii,          a,       b,    clear,           d,         Et,        f,        g;
 A:HIJKLMNO  =>   HIJKLMNO =>          h,          i,       j,   'k -9',     'ls -F',          m,     calN,        o; # 1st rEquIrd Use of quOting with
-A:PQRSTUVW  =>   PQRSTUVW =>          p,          q,       r,  ~/bin/S,         tee,       U2b8, vim.tiny,  whereis; #   signifcnt spAcez;
+A:PQRSTUVW  =>   PQRSTUVW =>       pal8,          q,       r,  ~/bin/S,         tee,       U2b8, vim.tiny,  whereis; #   signifcnt spAcez;
 A:XYZabcde  =>   XYZABCDE => /usr/bin/X,          y,      zc,     asci,          bk,    ~/bin/c,      dic, 'e $TTY'; # d was 'du -sb',now dic since more common
-A:fghijklm  =>   FGHIJKLM =>       find,       grep, history,     info,        jobs,       kill,     lsd8,      man;
-A:nopqrstu  =>   NOPQRSTU =>       ncal,      orpie,      ps,"sl calQ",  built-in-r,       shlp, 'tsgr b',     upd8; # q is not literal but SymbolicLink 2 calQ
+A:fghijklm  =>   FGHIJKLM =>       find,       grep, history,     info,        jobs,       kill,     lsd8,      man; # p is now 'cd;clear;echo -n -e "\e[3J"'
+A:nopqrstu  =>   NOPQRSTU =>       ncal,      orpie,     CCC,"sl calQ",  built-in-r,       shlp, 'tsgr b',     upd8; # q is not literal but SymbolicLink 2 calQ
 A:vwxyz.    =>   VWXYZ_   =>         v8, /usr/bin/w,    exit,     yelp,          zp, built-in-.;
 S           =>   c        =>  Trp:Shl => Source-highlight; # .shl.style fieldz Fg foregrnd (lEving Octology core d8a dFz abov4Xtrnl prog shl,St8z&&gmz BlO)
 S:bcktusrS  =>   WKBCcMRR => bGCOLOR  , cONTEXT, kEYWORD, tYPE     , uSERTYPE, sTRING  , rEGEXP          , Specialchar; # mAB mk S: Dflt&&have / rEsume root?
