--- a/.lsrc
+++ b/.lsrc
@@ -1,8 +1,8 @@
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
-# $VERSION='0.0';$d8VS='HAVM6k38'; 2du:mkUtl2gNR8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='HB5LBt8s'; 2du:mkUtl2gNR8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lsrc gNR8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
-# This file was gNR8d by `lrc` Vers:0.0 d8VS:H9NM3tLi on d8:HAVM6lHl. Please edit ~/.lrc and run `lrc` then `src` to see changes;
+# This file was gNR8d by `lrc` Vers:0.0 d8VS:HB4MI8B4 on d8:HB5LBvH7. Please edit ~/.lrc and run `lrc` then `src` to see changes;
 # nOt:I'm pretty sure itz Chunz(!Takiz)`ls`&&`dircolors`th@cud!hndl (MULTI)?HARDLINK sO rEmMbr2kEp th@ lIn cmNtd out4her(&&kEptstng2cnfirm);
 # Keywords COLOR,OPTIONS,&& EIGHTBIT (honored by Slackware dircolors) are recognized but ignored; TERMz && XtNsionz syncd2 2014;
 # Copyright(C) 1996-2016 FreeSoftwareFound8ion,Inc. Copying and distribution of this file, with or without modific8ion, are permitted provided the
@@ -478,6 +478,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .wpl                      01;38;5;013      # Windows PlayList muz filz in a  XML       format for Microsoft WindowsMediaPlayer
 .spi                      01;38;5;013
 .itl                      01;38;5;005      # iTunes Library
+.aup                      01;38;5;013      # Audacity Project
 .anx                      01;38;5;013      # HTTP://Wiki.Xiph.Org/index.php/MIME_Types_and_File_Extensions
 .axv                      01;38;5;013      # HTTP://Wiki.Xiph.Org/index.php/MIME_Types_and_File_Extensions
 .ogv                      01;38;5;013      # HTTP://Wiki.Xiph.Org/index.php/MIME_Types_and_File_Extensions
@@ -869,6 +870,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .jpeg                     01;38;5;164
 .JPG                      01;38;5;001
 .jpg                      01;38;5;164
+.kra                      01;38;5;013      # Krita.Org Art
 .mng                      01;38;5;164
 .mkv                      01;38;5;164      # Matroska.Org
 .m2v                      01;38;5;164      # MPEG-2 Video    only
