Upd8d .vimrc and sumb, renamed many f8 and m8 bin/ files.

--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='HBBL2dic'; 2du:mkUtl2gNR8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='HBCL6fkn'; 2du:mkUtl2gNR8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lsrc gNR8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -1255,30 +1255,31 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .ANSI.01.35                   M
 .ANSI.01.36                   C
 .ANSI.01.37                   W            # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.10.0-38-generic              R
-.10.0-37-generic              o
-.10.0-35-generic              Y
-.10.0-33-generic              G
-.10.0-32-generic              C
-.10.0-30-generic              B
-.10.0-28-generic              M
-.10.0-26-generic              p
-.10.0-24-generic              R
-.10.0-22-generic              o
-.10.0-21-generic              Y
-.10.0-20-generic              G
-.10.0-19-generic              C
-.8.0-46-generic               B
-.8.0-45-generic               M
-.8.0-44-generic               p
-.8.0-41-generic               R
-.8.0-40-generic               o
-.8.0-39-generic               Y
-.8.0-34-generic               G
-.8.0-30-generic               C
-.8.0-28-generic               B
-.8.0-27-generic               M
-.8.0-26-generic               p
+.13.0-16-generic              R
+.10.0-38-generic              o
+.10.0-37-generic              Y
+.10.0-35-generic              G
+.10.0-33-generic              C
+.10.0-32-generic              B
+.10.0-30-generic              M
+.10.0-28-generic              p
+.10.0-26-generic              R
+.10.0-24-generic              o
+.10.0-22-generic              Y
+.10.0-21-generic              G
+.10.0-20-generic              C
+.10.0-19-generic              B
+.8.0-46-generic               M
+.8.0-45-generic               p
+.8.0-44-generic               R
+.8.0-41-generic               o
+.8.0-40-generic               Y
+.8.0-39-generic               G
+.8.0-34-generic               C
+.8.0-30-generic               B
+.8.0-28-generic               M
+.8.0-27-generic               p
+.8.0-26-generic               R
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
