--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='HBIL8dic'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='HCOLFPl8'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -338,6 +338,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .sfv                                       # SimpleFileVerific8ion storing CRC32 cksumz from muz/mp3/sndtrx/KatamariDamacy-Fortissimo/
 .ja                                        # probably Japanese file from /etc/java-*-openjdk/ or /usr/(lib/(firefox|thunderbird)|share/aptitude)/
 .bbl
+.vrs                                       # likely UTF-8 text file containing Bible VeRSes (possibly including some Hebrew transl8ions)
 .rdf
 .gws                                       # NetGearRoutr GateWaySettings
 .lrx                                       # ~/muz/lrx    MusicLyricSings
@@ -832,6 +833,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .prt
 .pak
 .rdb
+.red                                       # likely UTF-8 text file containing alREaDy REaD excerpts from e-mail or other similar convers8ion thREaDs
 .err
 .fla
 .3rc                                       # /etc/qt3/ or ~/.qt/
