--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='I1OLGkra'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='I21LN832'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -1258,34 +1258,36 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .ANSI.01.35                   M
 .ANSI.01.36                   C
 .ANSI.01.37                   W            # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.13.0-25-generic              R
-.13.0-21-generic              o
-.13.0-17-generic              Y
-.13.0-16-generic              G
-.10.0-38-generic              C
-.10.0-37-generic              B
-.10.0-35-generic              M
-.10.0-33-generic              p
-.10.0-32-generic              R
-.10.0-30-generic              o
-.10.0-28-generic              Y
-.10.0-26-generic              G
-.10.0-24-generic              C
-.10.0-22-generic              B
-.10.0-21-generic              M
-.10.0-20-generic              p
-.10.0-19-generic              R
-.8.0-46-generic               o
-.8.0-45-generic               Y
-.8.0-44-generic               G
-.8.0-41-generic               C
-.8.0-40-generic               B
-.8.0-39-generic               M
-.8.0-34-generic               p
-.8.0-30-generic               R
-.8.0-28-generic               o
-.8.0-27-generic               Y
-.8.0-26-generic               G
+.13.0-32-generic              R
+.13.0-31-generic              o
+.13.0-25-generic              Y
+.13.0-21-generic              G
+.13.0-17-generic              C
+.13.0-16-generic              B
+.10.0-38-generic              M
+.10.0-37-generic              p
+.10.0-35-generic              R
+.10.0-33-generic              o
+.10.0-32-generic              Y
+.10.0-30-generic              G
+.10.0-28-generic              C
+.10.0-26-generic              B
+.10.0-24-generic              M
+.10.0-22-generic              p
+.10.0-21-generic              R
+.10.0-20-generic              o
+.10.0-19-generic              Y
+.8.0-46-generic               G
+.8.0-45-generic               C
+.8.0-44-generic               B
+.8.0-41-generic               M
+.8.0-40-generic               p
+.8.0-39-generic               R
+.8.0-34-generic               o
+.8.0-30-generic               Y
+.8.0-28-generic               G
+.8.0-27-generic               C
+.8.0-26-generic               B
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
