--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='I2PLELP2'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='I2PLM4TH'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -921,8 +921,9 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .docx#                        R            # LibreOffice .~lock  file
 .bp1                                       # BusiPlan
 .css                          M            # Cascading Style Sheets
-.sxw                          M            #  OpenOffice.Org Stndrd?XmlWord-processing dox?
-.tex                          M            # DonKnuth LaTeX  DVI,etc. (Dopeish)
+.sxw                          M            #  OpenOffice.Org Stndrd?XmlWord-processing dox?  # below simple URL probably for Danny's l8st public thoughts
+.tex                          C            # DonKnuth LaTeX  DVI,etc. (Dopeish), HTTP://Web.CVS.Savannah.NonGNU.Org/viewvc/bool2/bool2/theory/goodaut.tex
+.aux                                       # DonKnuth LaTeX  AUXiliary file (along with .log as extra output from `pdflatex *.tex`) for cross-referencing
 .djvu                                      # DjVu              image          4m@
 .pdf                          M            # AdObE           P0rtable DocUmNt 4m@
 .ps                           M            # AdObE           P0st Scrpt
