--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='I5CMEman'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='I6JMADE8'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -1259,42 +1259,43 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .ANSI.01.34                   B
 .ANSI.01.35                   M
 .ANSI.01.36                   C
-.ANSI.01.37                   W            # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.13.0-43-generic              R
-.13.0-41-generic              o
-.13.0-39-generic              Y
-.13.0-37-generic              G
-.13.0-36-generic              C
-.13.0-32-generic              B
-.13.0-31-generic              M
-.13.0-25-generic              p
-.13.0-21-generic              R
-.13.0-17-generic              o
-.13.0-16-generic              Y
-.10.0-38-generic              G
-.10.0-37-generic              C
-.10.0-35-generic              B
-.10.0-33-generic              M
-.10.0-32-generic              p
-.10.0-30-generic              R
-.10.0-28-generic              o
-.10.0-26-generic              Y
-.10.0-24-generic              G
-.10.0-22-generic              C
-.10.0-21-generic              B
-.10.0-20-generic              M
-.10.0-19-generic              p
-.8.0-46-generic               R
-.8.0-45-generic               o
-.8.0-44-generic               Y
-.8.0-41-generic               G
-.8.0-40-generic               C
-.8.0-39-generic               B
-.8.0-34-generic               M
-.8.0-30-generic               p
-.8.0-28-generic               R
-.8.0-27-generic               o
-.8.0-26-generic               Y
+.ANSI.01.37                   W
+.8.0-46-generic               W            # for very old 4.8.* kernelz, just releg8 them all to bright White, since they should be quite anomalous in future
+.8.0-45-generic               W
+.8.0-44-generic               W
+.8.0-41-generic               W
+.8.0-40-generic               W
+.8.0-39-generic               W
+.8.0-34-generic               W
+.8.0-30-generic               W
+.8.0-28-generic               W
+.8.0-27-generic               W
+.8.0-26-generic               W
+.10.0-38-generic              r            # for older 4.10.* kernelz which should be mostly retired by now, invert default color case for mostly dark shadez
+.10.0-37-generic              O
+.10.0-35-generic              y
+.10.0-33-generic              g
+.10.0-32-generic              c
+.10.0-30-generic              b
+.10.0-28-generic              m
+.10.0-26-generic              P
+.10.0-24-generic              r
+.10.0-22-generic              O
+.10.0-21-generic              y
+.10.0-20-generic              g
+.10.0-19-generic              c            # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
+.13.0-45-generic              R
+.13.0-43-generic              o
+.13.0-41-generic              Y
+.13.0-39-generic              G
+.13.0-37-generic              C
+.13.0-36-generic              B
+.13.0-32-generic              M
+.13.0-31-generic              p
+.13.0-25-generic              R
+.13.0-21-generic              o
+.13.0-17-generic              Y
+.13.0-16-generic              G
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
