--- a/.lrc
+++ b/.lrc
@@ -1283,8 +1283,8 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .10.0-22-generic              O
 .10.0-21-generic              y
 .10.0-20-generic              g
-.10.0-19-generic              c            # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.13.0-45-generic              R
+.10.0-19-generic              c
+.13.0-45-generic              R            # for slightly old 4.13.* kernelz before upgrading to Ubuntu 18.04 on Chun 1st, then maybe sync R2K, then upgr KRA
 .13.0-43-generic              o
 .13.0-41-generic              Y
 .13.0-39-generic              G
@@ -1295,7 +1295,9 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .13.0-25-generic              R
 .13.0-21-generic              o
 .13.0-17-generic              Y
-.13.0-16-generic              G
+.13.0-16-generic              G            # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
+.15.0-23-generic              R
+.15.0-22-generic              o
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
