--- a/.lsrc
+++ b/.lsrc
@@ -2,7 +2,7 @@
 # $VERSION='0.0';$d8VS='I6JMADE8'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
-# This file was gNR8d by `lrc` Vers:0.0 d8VS:I5LM11I5 on d8:I6UMEpWm. Please edit ~/.lrc and run `lrc` then `src` to see changes;
+# This file was gNR8d by `lrc` Vers:0.0 d8VS:I5LM11I5 on d8:I74M3OPN. Please edit ~/.lrc and run `lrc` then `src` to see changes;
 # nOt:I'm pretty sure itz Chunz(!Takiz)`ls`&&`dircolors`th@cud!hndl (MULTI)?HARDLINK sO rEmMbr2kEp th@ lIn cmNtd out4her(&&kEptstng2cnfirm);
 # Keywords COLOR,OPTIONS,&& EIGHTBIT (honored by Slackware dircolors) are recognized but ignored; TERMz && XtNsionz syncd2 2016;
 # Copyright(C) 1996-2016 FreeSoftwareFound8ion,Inc. Copying and distribution of this file, with or without modific8ion, are permitted provided the
@@ -837,6 +837,10 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .err                      01;38;5;009
 .fla                      01;38;5;009
 .3rc                      01;38;5;009      # /etc/qt3/ or ~/.qt/
+.esd                      01;38;5;009      # I73M73MI:upd8ng 4 l8st krnl identified these 4 new aliases as newest candid8z 4 incorpor8ion here;
+.dwm                      01;38;5;009
+.swm                      01;38;5;009
+.wim                      01;38;5;009
 .deny                     01;38;5;009
 .SKIP                     01;38;5;009      # MANIFEST.SKIP from Perl packages
 .lock                     01;38;5;009
@@ -1243,6 +1247,8 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .D.0                      01;38;5;002
 .E.0                      01;38;5;004
 .F.0                      01;38;5;000
+.asc                      01;38;5;172      # I74M2ASC:added entries for PGP-signed 7776 pswd list from Diceware && stored in ~/dox/dvl/ref/ plain ASCII text;
+.ascii                    01;38;5;003
 .ansi                     01;38;5;011
 .ANSI.00.30               01;38;5;000      # \.ANSI\.[01]\.3[0-7] dotted color-code extensions
 .ANSI.00.31               01;38;5;001
@@ -1284,20 +1290,21 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .10.0-21-generic          01;38;5;184
 .10.0-20-generic          01;38;5;002
 .10.0-19-generic          01;38;5;006
-.13.0-45-generic          01;38;5;009      # for slightly old 4.13.* kernelz before upgrading to Ubuntu 18.04 on Chun 1st, then maybe sync R2K, then upgr KRA
-.13.0-43-generic          01;38;5;172
-.13.0-41-generic          01;38;5;011
-.13.0-39-generic          01;38;5;010
-.13.0-37-generic          01;38;5;014
-.13.0-36-generic          01;38;5;012
-.13.0-32-generic          01;38;5;013
-.13.0-31-generic          01;38;5;092
-.13.0-25-generic          01;38;5;009
-.13.0-21-generic          01;38;5;172
-.13.0-17-generic          01;38;5;011
-.13.0-16-generic          01;38;5;010      # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.15.0-23-generic          01;38;5;009
-.15.0-22-generic          01;38;5;172
+.13.0-45-generic          01;38;5;009;48;5;004 # for slightly old 4.13.* kernelz before upgrading to Ubuntu 18.04 on Chun 1st, then maybe sync R2K, then upgr KRA
+.13.0-43-generic          01;38;5;172;48;5;004
+.13.0-41-generic          01;38;5;011;48;5;004
+.13.0-39-generic          01;38;5;010;48;5;004
+.13.0-37-generic          01;38;5;014;48;5;004
+.13.0-36-generic          01;38;5;012;48;5;004
+.13.0-32-generic          01;38;5;013;48;5;004
+.13.0-31-generic          01;38;5;092;48;5;004
+.13.0-25-generic          01;38;5;009;48;5;004
+.13.0-21-generic          01;38;5;172;48;5;004
+.13.0-17-generic          01;38;5;011;48;5;004
+.13.0-16-generic          01;38;5;010;48;5;004 # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
+.15.0-24-generic          01;38;5;009
+.15.0-23-generic          01;38;5;172
+.15.0-22-generic          01;38;5;011
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
