--- a/.lrc
+++ b/.lrc
@@ -1,5 +1,5 @@
 # F1RLLK2K:~/.lrc  by PipStuart <Pip@CPAN.Org> as an altern8 format for .lsrc ideally having new ~/bin/lrc gNR8 either from the other;
-# $VERSION='0.0';$d8VS='I6JMADE8'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='I87MIk30'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
@@ -126,6 +126,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .hax
 .emacs                        O
 .vimrc
+.Hrc.                         k
 .Hrc                          G            #  8sh ~ fyl
 .lrc                          G            #  lsd8 lsrc
 .bxrc
@@ -268,6 +269,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .conf                                      # config filz,(basic) play-list filz,shell-scripts,bookmarks,&& DOS-style executablz
 .dmrc                                      # Dsktp Menu|Mngr? on Chun
 .gtkrc
+.toprc                                     # nstd of htop, can input "zxcVm1t0" then g[2-4] to go2 sepR8 wndoz&&du similR inputz then W writez cnfg
 .mmixrc
 .alsarc                       R
 .aumixrc
@@ -349,6 +351,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .url                                       # text filz containing web URLs
 .URL
 .use
+.xl8                                       # ~/dvl/t8/**/xl8/ gener8d d8a files from attempt to autom8 complex transl8ion evalU8ions with xdotool .xd2 scripts
 .MANIFEST
 .bookmarks
 .gtk-bookmarks                c            # ~ file that I'd rather vary the color of seen commonly there than match other *.bookmarks elsewhere
@@ -528,6 +531,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .logo                                      # ASCII art file maybe containing ANSI escaped colors && figlet-gend text (eg,/etc/issue.logo w/"Gentoo")
 .login
 .lesshst
+.wget-hsts
 .history
 .zsh_history                               # .*history
 .zprofile                     c
@@ -631,6 +635,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .gpg~                         c
 .pgp
 .sxp
+.xd2                                       # xdotool command script to gener8 ~/dvl/t8/**/xl8/ d8a files in attempt to autom8 complex transl8ion evalU8ions
 .xinitrc                                   # ch2brItCyan from drkGrn .x* dflt4xinitz
 .xinitrc-compiz
 .xinitrc-flux2x2
@@ -912,6 +917,7 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .xpm
 .xwd
 .yuv
+.kdb.                         k
 .kdb                                       # KeePass  v1 DataBase
 .kdbx                                      # KeePassX v2 DataBase
 .uot                                       # LibreOffice Writer  Unified Office format Text
@@ -1302,9 +1308,11 @@ CHR                           Yk           #cd= 01;33;40    01;33;40  CHaRacter 
 .13.0-21-generic              ob
 .13.0-17-generic              Yb
 .13.0-16-generic              Gb           # BlO /boot Linux kernelz versionz  # F1ELGnuL:ROYG CBMP => 1;3[1o32 645p]; mAB EvN2LE gNR8 upd8z from `ls /boot`;
-.15.0-24-generic              R
-.15.0-23-generic              o
-.15.0-22-generic              Y
+.15.0-30-generic              R
+.15.0-29-generic              o
+.15.0-24-generic              Y
+.15.0-23-generic              G
+.15.0-22-generic              C
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
